--- a/.travis.yml
+++ b/.travis.yml
@@ -217,20 +217,24 @@ jobs:
           - google-gdk-license-.+
         cache:
           directories:
-            - $CACHE
             - $HOME/.gradle/caches/
             - $HOME/.gradle/wrapper/dists/
         before_install:
           - export PUSHD="$(pwd)"
+          - mkdir -p $CACHE
+          - cd $CACHE
           - |
-            if ! [ -f $CACHE/ndk.zip ]
+            if [ -f $CACHE/ndk.zip ]
             then
-              mkdir -p $CACHE
-              cd $CACHE
-              wget http://dl.google.com/android/repository/android-ndk-$NDK_VERSION-linux-x86_64.zip -O ndk.zip
+              mv $CACHE/ndk.zip $CACHE/ndk-$NDK_VERSION.zip
+            fi
+          - |
+            if ! [ -f $CACHE/ndk-$NDK_VERSION.zip ]
+            then
+              wget http://dl.google.com/android/repository/android-ndk-$NDK_VERSION-linux-x86_64.zip -O ndk-$NDK_VERSION.zip
             fi
           - cd ..
-          - unzip $CACHE/ndk.zip > /dev/null
+          - unzip $CACHE/ndk-$NDK_VERSION.zip > /dev/null
           - export ANDROID_NDK_HOME=`pwd`/android-ndk-$NDK_VERSION
           - cd "${PUSHD}"
         script:
@@ -247,6 +251,7 @@ jobs:
             else
               jarsigner -storetype pkcs12 -keystore winrt/SDLPal.UWP/SDLPal_TemporaryKey.pfx -sigalg SHA1withRSA -digestalg SHA1 -signedjar deploy/sdlpal-release.apk -storepass "" android/app/build/outputs/apk/release/app-release-unsigned.apk 1
             fi
+          - if [[ $TRAVIS_COMMIT_MESSAGE =~ .*[skip\ play].* ]]; then PLAY_DEPLOY=0; else PLAY_DEPLOY=1; fi
 
       - os: osx
         osx_image: xcode11
@@ -311,7 +316,7 @@ jobs:
 
 before_deploy:
   - |
-    if ! [[ -z "$ANDROID_BUILD_TOOLS" ]]
+    if [[ x"$PLAY_DEPLOY" == "x1" ]]
     then
         sudo apt-add-repository -y ppa:brightbox/ruby-ng
         sudo apt-get update
@@ -343,10 +348,10 @@ before_deploy:
 
 deploy:
   - provider: script
-    script: bash -c '[[ -z "$ANDROID_BUILD_TOOLS" ]] || fastlane supply --apk deploy/sdlpal-release.apk --track alpha --json_key ./google-key.json --package_name com.sdlpal.sdlpal'
+    script: bash -c '[[ x"$PLAY_DEPLOY" != "x1" ]] || fastlane supply --apk deploy/sdlpal-release.apk --track alpha --json_key ./google-key.json --package_name com.sdlpal.sdlpal'
     skip_cleanup: true
     on:
-      branch: master
+      all_branches: true
   - provider: script
     script: bash -c '[[ -f "emscripten/sdlpal.js" ]] && git clone --depth=1 https://github.com/sdlpal/demo ~/demo && cp -f emscripten/*.{html,js,wasm,png} ~/demo && cd ~/demo && git commit -mAutoupdate -a && git push "https://${AUTO_UPDATE_USERNAME}:${AUTO_UPDATE_PASS}@github.com/sdlpal/demo" || true'
     skip_cleanup: true
