WIP: integrate MPV style shader including MRT

--- a/win32/sdlpal.vcxproj.filters
+++ b/win32/sdlpal.vcxproj.filters
@@ -351,9 +351,6 @@
     <ClCompile Include="..\video_glsl.c">
       <Filter>glsl</Filter>
     </ClCompile>
-    <ClCompile Include="..\glslp.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\libopusfile\src\opus_analysis.c">
       <Filter>libopusfile</Filter>
     </ClCompile>
@@ -813,6 +810,9 @@
     <ClCompile Include="..\midi_tsf.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\glslp.c">
+      <Filter>glsl</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ascii.h">
@@ -1202,9 +1202,6 @@
     <ClInclude Include="..\video_glsl.h">
       <Filter>glsl</Filter>
     </ClInclude>
-    <ClInclude Include="..\glslp.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\defines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -1447,6 +1444,9 @@
     </ClInclude>
     <ClInclude Include="..\midi_timidity.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\glslp.h">
+      <Filter>glsl</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
