CI: resolve *OS externally-managed-environment introduced after python 3.12 by add venv setup in setup-python

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,7 +10,10 @@ jobs:
   build:
     runs-on: macos-14
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
     - name: submodules
       run: |
         sed -i.bak 's#\.\./#https://github.com/sdlpal/#g' .gitmodules
