--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: Install Dependencies
       run: sudo apt-get install python3-pip && sudo pip3 install cloudsmith-cli
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: submodules
       run: |
         sed -i 's#\.\./#https://github.com/sdlpal/#g' .gitmodules
@@ -32,3 +32,7 @@ jobs:
       run: cloudsmith push raw sdlpal/sdlpal
            --version `awk -F\" '{print $2;}' generated.h` --name Android
            --republish deploy/*.apk --tags "branch/`echo $GITHUB_REF | sed s#refs/heads/##`"
+    - uses: actions/upload-artifact@v4
+      with:
+        path: deploy
+
