--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: Install Dependencies
       run: sudo apt-get install libsdl2-dev libfltk1.3-dev upx-ucl python3-pip fuse && sudo pip3 install cloudsmith-cli
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: submodules
       run: |
         sed -i 's#\.\./#https://github.com/sdlpal/#g' .gitmodules
@@ -30,4 +30,7 @@ jobs:
       run: cloudsmith push raw sdlpal/sdlpal
            --version `awk -F\" '{print $2;}' generated.h` --name AppImage
            --republish deploy/*.AppImage --tags "branch/`echo $GITHUB_REF | sed s#refs/heads/##`"
+    - uses: actions/upload-artifact@v4
+      with:
+        path: deploy
 
