--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -35,3 +35,7 @@ jobs:
         cloudsmith push raw sdlpal/sdlpal \
           --version `awk -F\" '{print $2;}' generated.h` --name macOS \
           --republish deploy/*.dmg --tags "branch/`echo $GITHUB_REF | sed s#refs/heads/##`"
+    - uses: actions/upload-artifact@v4
+      with:
+        path: deploy
+
